--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -379,3 +379,18 @@
   text-decoration: none;
   color: 	#17a2b8
 }
+.signin .ug-link {
+  background-color: #0d6efd;     
+  color: white;                   
+  padding: 4px 20px;              
+  border-radius: 5px;                      
+  font-size: 13px;  
+  display: flex;                
+  margin-top: 15px;                 
+  justify-content: center;           
+  letter-spacing: 0.5px;
+  text-decoration: none;
+}
+.signin .ug-link:hover {
+  background-color: #007BFF;
+}
