--- a/frontend/src/Authentication/SignIn.css
+++ b/frontend/src/Authentication/SignIn.css
@@ -5,21 +5,50 @@
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0px 0 10px rgba(0, 0, 0, 0.2);
+  animation: fadeIn 0.5s ease-in-out;
+}
+@keyframes fadeIn {
+  from { 
+    opacity: 0; 
+    transform: translateY(50px); 
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0); 
+  }
+}
+.signin .logo-icon {
+  font-size: 40px;
+  color: #f1356d;
+  display: flex;
+  margin: auto;
 }
 .signin h2 {
   font-size: 24px;
   color: #f1356d;
   text-align: center;
-  margin-bottom: 30px;
+  margin-top: 10px;
 }
-.signin input {
-  width: 95%;
-  padding: 10px;
-  margin-top: 15px;
-  margin-bottom: 20px;
+.signin .input-box, .password-wrapper {
+  display: flex;
+  align-items: center;
   border: 1.5px solid #ddd;
   border-radius: 10px;
-  font-size: 16px;
+  padding: 0 10px;
+  margin-bottom: 20px;
+  background: #fff;
+  margin-top: 10px;
+}
+.signin .input-box input, .signin .password-wrapper input {
+  border: none;
+  outline: none;
+  padding: 12px 10px;
+  flex: 0.9;
+  font-size: inherit;
+  background: transparent;
+}
+.signin .left-icon {    
+  color: #aaa;
 }
 .signin button {
   width: 100%;
@@ -46,8 +75,8 @@
 }
 .signin .toggle-visibility {
   position: absolute;
-  top: 40%;
   right: 10px;
+  top: 39%;
   cursor: pointer;
 }
 .signin .notice-wrapper {
@@ -70,4 +99,9 @@
 }
 .signin .ug-link:hover {
   background-color: #007BFF;
+}
+.signin input:-webkit-autofill {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: #000 !important;
+  caret-color: black;
 }
