--- a/frontend/src/Authentication/SignUp.css
+++ b/frontend/src/Authentication/SignUp.css
@@ -5,21 +5,50 @@
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0px 0 10px rgba(0, 0, 0, 0.2);
+  animation: fadeIn 0.5s ease-in-out;
+}
+@keyframes fadeIn {
+  from { 
+    opacity: 0; 
+    transform: translateY(50px); 
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0); 
+  }
+}
+.signup .logo-icon {
+  font-size: 40px;
+  color: #f1356d;
+  display: flex;
+  margin: auto;
 }
 .signup h2 {
   font-size: 24px;
   color: #f1356d;
   text-align: center;
-  margin-bottom: 30px;
+  margin-top: 10px;
 }
-.signup input {
-  width: 95%;
-  padding: 10px;
-  margin-top: 15px;
-  margin-bottom: 20px;
+.signup .input-box, .password-wrapper {
+  display: flex;
+  align-items: center;
   border: 1.5px solid #ddd;
   border-radius: 10px;
-  font-size: 16px;
+  padding: 0 10px;
+  margin-bottom: 20px;
+  background: #fff;
+  margin-top: 10px;
+}
+.signup .input-box input, .signup .password-wrapper input {
+  border: none;
+  outline: none;
+  padding: 12px 10px;
+  flex: 0.9;
+  font-size: inherit;
+  background: transparent;
+}
+.signup .left-icon {    
+  color: #aaa;
 }
 .signup button {
   width: 100%;
@@ -46,8 +75,8 @@
 }
 .signup .toggle-visibility {
   position: absolute;
-  top: 40%;
   right: 10px;
+  top: 39%;
   cursor: pointer;
 }
 .signup .notice-wrapper {
@@ -55,4 +84,9 @@
   color: #084298;
   border-left: 4px solid #0d6efd;
   padding-left: 10px;
+}
+.signup input:-webkit-autofill {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: #000 !important;
+  caret-color: black;
 }
