--- a/frontend/src/Authentication/SignUp.css
+++ b/frontend/src/Authentication/SignUp.css
@@ -85,8 +85,8 @@
   border-left: 4px solid #0d6efd;
   padding-left: 10px;
 }
-.signup input:-webkit-autofill {
-  transition: background-color 5000s ease-in-out 0s;
-  -webkit-text-fill-color: #000 !important;
-  caret-color: black;
+
+/* Delay auto fill background colour from appearing */
+.signin input:-webkit-autofill {
+  transition: background-color 1000s;
 }
