--- a/frontend/src/ArchivedApplication/ViewArchivedApplication.css
+++ b/frontend/src/ArchivedApplication/ViewArchivedApplication.css
@@ -131,6 +131,17 @@
   margin-bottom: 0px;              
   letter-spacing: 0.5px;           
 }
+.archived-application-list .application-content .ghosted {
+  background-color: #b8b8d1;
+  color: white;
+  padding: 4px 20px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 13px;
+  display: inline-flex;
+  margin: 0px;
+  letter-spacing: 0.5px;
+}
 .archived-application-list .application-button button {
   background-color:#f1356d;
   border: 0;
