--- a/frontend/src/JobApplication/ViewApplication.css
+++ b/frontend/src/JobApplication/ViewApplication.css
@@ -142,7 +142,7 @@
 }
 
 .application-list .application-content .applied {
-  background-color: #6c757d;
+  background-color: #17A2B8;
   color: white;
   padding: 4px 20px;
   border-radius: 5px;
@@ -155,7 +155,7 @@
 }
 
 .application-list .application-content .interview {
-  background-color: #0d6efd;
+  background-color: #0D6EFD;
   color: white;
   padding: 4px 20px;
   border-radius: 5px;
@@ -207,7 +207,7 @@
 }
 
 .application-list .application-content .ghosted {
-  background-color: #b8b8d1;
+  background-color: #6C757D;
   color: white;
   padding: 4px 20px;
   border-radius: 5px;
