--- a/frontend/src/ArchivedApplication/ViewArchivedApplication.css
+++ b/frontend/src/ArchivedApplication/ViewArchivedApplication.css
@@ -18,7 +18,7 @@
 }
 
 .archived-application-list {
-  max-width: 710px;
+  max-width: 750px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -30,27 +30,36 @@
   padding-bottom: 20px;
   border-bottom: 1px solid #ddd;
   display: flex;
-  gap: 60px;
+  gap: 0;
+  position: relative;
 }
 
-.application-list .button-group {
-  margin-left: auto;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  color:#fff;
-  gap: 10px;
-  position: relative;
-  flex: 0 0 165px;
+.archived-application-list .notes textarea {
+  position: absolute;
+  right: -330px;
+  top: 15px;
+  height: 89%;
+  width: 300px;
+  padding: 14px;
+  font-size: 15px;
+  border-radius: 10px;
+  border: 2px solid #fbc02d;
+  background-color: #fff9c4;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  resize: none;
+  outline: none;
+  box-sizing: border-box;
 }
 
 .archived-application-list .button-group {
-  display: flex;
   margin-left: auto;
   cursor: pointer;
+  display: flex;
   align-items: center;
-  color:#fff;
+  color: #fff;
   gap: 10px;
+  position: relative;
+  width: 190px;
 }
 
 .archived-application-list .button-group button {
@@ -70,6 +79,7 @@
 .archived-application-list .application-content {  
   color: #666;
   word-break: break-all;
+  width: 500px;
 }
 
 .archived-application-list .application-content h2 {
