--- a/frontend/src/JobApplication/ViewApplication.css
+++ b/frontend/src/JobApplication/ViewApplication.css
@@ -18,7 +18,7 @@
 }
 
 .application-list {
-  max-width: 710px;
+  max-width: 750px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -30,7 +30,8 @@
   padding-bottom: 20px;
   border-bottom: 1px solid #ddd;
   display: flex;
-  gap: 60px;
+  gap: 0;
+  position: relative;
 }
 
 .application-list .button-group {
@@ -41,14 +42,14 @@
   color: #fff;
   gap: 10px;
   position: relative;
-  flex: 0 0 165px;
+  width: 190px;
 }
 
 .application-list .button-group .archive-button button {
   background-color: green;
   color: cornsilk;
   padding: 7px 20px;
-  border-radius: 5px;
+  border-radius: 10px;
   font-weight: bolder;
   font-size: 13px;
   letter-spacing: 2px;
@@ -56,9 +57,27 @@
   cursor: pointer;
   position: absolute;
   bottom: 0.5px;
-  right: 8px;
-  left: 0px;
+  right: 33px;
+  left: 1px;
 }
+
+.application-list .notes textarea {
+  position: absolute;
+  right: -330px;
+  top: 15px;
+  height: 89%;
+  width: 300px;
+  padding: 14px;
+  font-size: 15px;
+  border-radius: 10px;
+  border: 2px solid #fbc02d;
+  background-color: #fff9c4;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  resize: none;
+  outline: none;
+  box-sizing: border-box;
+}
+
 
 .application-list .button-group button {
   background-color: #f1356d;
@@ -77,6 +96,7 @@
 .application-list .application-content {
   color: #666;
   word-break: break-all;
+  width: 500px;
 }
 
 .application-list .application-content h2 {
