--- a/frontend/src/Interview/ViewInterview.css
+++ b/frontend/src/Interview/ViewInterview.css
@@ -42,6 +42,22 @@
   word-wrap: break-word;
 }
 
+.interview-list .interview-content .location {
+  color: #2a9d8f;
+}
+
+.interview-list .interview-content .type {
+  color: #5e60ce;
+}
+
+.interview-list .interview-content .notes {
+  background-color: #fff9c4;;
+  border-left: 4px solid #fbc02d;
+  padding-left: 10px;
+  margin-top: 4px;
+  color: #495057;
+}
+
 .interview-list .interview-content h2 {
   font-size: 24px;
   color: black;
