--- a/frontend/src/ArchivedApplication/ViewArchivedInterview.css
+++ b/frontend/src/ArchivedApplication/ViewArchivedInterview.css
@@ -37,6 +37,22 @@
   word-break: break-all;
 }
 
+.archived-interview-list .interview-content .location {
+  color: #2a9d8f;
+}
+
+.archived-interview-list .interview-content .type {
+  color: #5e60ce;
+}
+
+.archived-interview-list .interview-content .notes {
+  background-color: #fff9c4;;
+  border-left: 4px solid #fbc02d;
+  padding-left: 10px;
+  margin-top: 4px;
+  color: #495057;
+}
+
 .archived-interview-list .interview-content h2 {
   font-size: 24px;
   color: black;
