--- a/frontend/src/JobApplication/ViewApplication.css
+++ b/frontend/src/JobApplication/ViewApplication.css
@@ -99,6 +99,10 @@
   width: 500px;
 }
 
+.application-list .application-content .location {
+    color: #2a9d8f;
+}
+
 .application-list .application-content h2 {
   font-size: 24px;
   color: black;
