--- a/client/src/ArchivedApplication/ViewArchivedApplication.css
+++ b/client/src/ArchivedApplication/ViewArchivedApplication.css
@@ -167,6 +167,19 @@
   letter-spacing: 0.5px;           
 }
 
+.archived-application-list .application-content .declined {
+  background-color: rebeccapurple;  
+  color: white;                   
+  padding: 4px 20px;              
+  border-radius: 5px;            
+  font-weight: 600;           
+  font-size: 13px;             
+  display: inline-flex;         
+  margin-top: 0px;               
+  margin-bottom: 0px;              
+  letter-spacing: 0.5px;           
+}
+
 .archived-application-list .application-content .rejected {
   background-color: #dc3545; 
   color: white;                   
