--- a/client/src/JobApplication/ViewApplication.css
+++ b/client/src/JobApplication/ViewApplication.css
@@ -242,6 +242,18 @@
   letter-spacing: 0.5px;
 }
 
+.application-list .application-content .declined {
+  background-color: rebeccapurple;
+  color: white;
+  padding: 4px 20px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 13px;
+  display: inline-flex;
+  margin: 0px;
+  letter-spacing: 0.5px;
+}
+
 .application-list .application-button button {
   background-color: #f1356d;
   border: 0;
